better bouncing action for the unicorn dancers

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,7 +12,9 @@
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
-      <a href="#" class="addMoverButton" data-dancer-maker-function-name="makeMoverDancer">add a moving dancer</a>  
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMoverDancer">add a moving dancer</a>  
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeUnicornDancer">add a unicorn</a> 
+      <a href="#" class="lineUp">line up!</a>
       </div>
     <script src="src/init.js"></script>
     <!--<div class="dancefloor">
