--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,7 +17,7 @@
       <a href="#" class="lineUp">line up!</a>
       </div>
     <script src="src/init.js"></script>
-    <!--<div class="dancefloor">
-    </div>-->
+    <div class="dancefloor">
+    </div>
   </body>
 </html>
