--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,7 +17,16 @@
       <a href="#" class="lineUp">line up!</a>
       </div>
     <script src="src/init.js"></script>
-    <div class="dancefloor">
+    <div id="clouds">
+      <div class="cloud x1"></div>
+      <!-- Time for multiple clouds to dance around -->
+      <div class="cloud x2"></div>
+      <div class="cloud x3"></div>
+      <div class="cloud x4"></div>
+      <div class="cloud x5"></div>
+      <div class="dancefloor">
+      </div>
     </div>
+    
   </body>
 </html>
