utilize multiple unicorns; they dance across the screen

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,13 +7,16 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/tmpDancer.js"></script>
+    <script src="src/sparkle.js"></script>
+    
+
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeMoverDancer">add a moving dancer</a>  
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeUnicornDancer">add a unicorn</a> 
+      <a href="#" class="addDancerButton sparkley last" data-dancer-maker-function-name="makeUnicornDancer">add a unicorn</a> 
       <a href="#" class="lineUp">line up!</a>
       </div>
     <script src="src/init.js"></script>
